tests/ok/recursive_struct_direct.cz
// Test recursive struct (direct)
struct Node {
    i32 value
    Node next
}

fn main() i32 {
    return 0
}
