tests/fail/interface_missing_method.cz
// Test that struct must implement all interface methods

iface MyInterface {
    fn tostring() char?
    fn toint() i32
}

struct MyStruct : MyInterface {
    i32 value
}

// Only implementing tostring, missing toint
fn MyStruct:tostring() char? {
    return "MyStruct"
}

fn main() i32 {
    return 0
}
